portfolio/src/main/webapp/css/nightmode.css
.mb-0 { 
  color: #fff;
}

.mb-3 { 
  color: #fff;
}

.mb-5 { 
  color: #fff;
}

.bg-mode {
  background-color: #2f353a !important;
}

.header-mode { 
  color: #fff;
}

.social-icons .social-icon {
  background-color: #fff;
  color: #343a40;
}

.info-window-text { 
    color: #2f353a; 
}

